--- a/.hintrc
+++ b/.hintrc
@@ -7,7 +7,8 @@
       "default",
       {
         "ignore": [
-          "scroll-behavior"
+          "scroll-behavior",
+          "width: fit-content"
         ]
       }
     ],
@@ -27,6 +28,18 @@
       {
         "frame-title": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not and_ff <= 110",
+    "not firefox <= 111"
+  ]
 }
