--- a/.hintrc
+++ b/.hintrc
@@ -40,6 +40,8 @@
     "defaults",
     "not ie 11",
     "not and_ff <= 110",
-    "not firefox <= 111"
+    "not firefox <= 111",
+    "not ios_saf <= 16.3",
+    "not safari <= 16.3"
   ]
 }
